--- a/MyApplication/app/src/main/res/layout/activity_main_tab.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main_tab.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <com.bricks.widgets.viewpager.NoScrollViewPager
+    <com.android.ge.widgets.view.NoScrollViewPager
+        android:id="@+id/vp_tab"
         android:layout_width="match_parent"
         android:layout_weight="1"
-        android:layout_height="0dp"></com.bricks.widgets.viewpager.NoScrollViewPager>
+        android:layout_height="0dp"></com.android.ge.widgets.view.NoScrollViewPager>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,6 +21,7 @@
             android:layout_height="1dp"
             android:background="#cecece"/>
         <RadioGroup
+            android:id="@+id/rg_tab"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="bottom|center_horizontal"
@@ -28,17 +31,21 @@
             <RadioButton
                 android:id="@+id/rbtn_homepage"
                 style="@style/style_main_tab_radio"
+                android:text="@string/tab_homepage"
                 android:drawableTop="@drawable/main_tab_homepage"/>
             <RadioButton
                 android:id="@+id/rbtn_learning"
                 style="@style/style_main_tab_radio"
+                android:text="@string/tab_learning"
                 android:drawableTop="@drawable/main_tab_learning"/>
             <RadioButton
                 android:id="@+id/rbtn_task"
                 style="@style/style_main_tab_radio"
+                android:text="@string/tab_task"
                 android:drawableTop="@drawable/main_tab_task"/>
             <RadioButton
                 android:id="@+id/rbtn_me"
+                android:text="@string/tab_me"
                 style="@style/style_main_tab_radio"
                 android:drawableTop="@drawable/main_tab_me"/>
         </RadioGroup>
