--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="bg_transparent">#00000000</color>
+    <color name="bg_transparent_50">#4d000000</color>
     <color name="white">#ffffffff</color>
     <color name="text_black">#333333</color>
     <color name="bg_line">#e4e4e4</color>
