1.首页完善；2.学习页

--- a/MyApplication/app/src/main/res/layout/activity_main_tab.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main_tab.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/rbtn_homepage"
                 style="@style/style_main_tab_radio"
                 android:text="@string/tab_homepage"
+                android:checked="true"
                 android:drawableTop="@drawable/main_tab_homepage"/>
             <RadioButton
                 android:id="@+id/rbtn_learning"
