--- a/MyApplication/app/src/main/res/layout/fm_homepage.xml
+++ b/MyApplication/app/src/main/res/layout/fm_homepage.xml
@@ -11,10 +11,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/bg_main">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_news"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -22,6 +24,8 @@
                 android:id="@+id/rv_required_courses"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp" />
 
@@ -29,6 +33,8 @@
                 android:id="@+id/rv_recommand_courses"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp" />
         </LinearLayout>
