--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="bg_main">#f5f5f5</color>
+
     <color name="bg_transparent">#00000000</color>
     <color name="bg_transparent_50">#4d000000</color>
     <color name="white">#ffffffff</color>
