--- a/MyApplication/app/src/main/res/layout/fm_learning.xml
+++ b/MyApplication/app/src/main/res/layout/fm_learning.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_learning"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:background="@color/white"></android.support.v7.widget.RecyclerView>
 
 
 </RelativeLayout>
