--- a/MyApplication/app/src/main/res/layout/item_for_course.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_course.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lin_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
@@ -16,6 +18,7 @@
             android:background="@color/bg_line"/>
 
         <View
+            android:visibility="gone"
             android:id="@+id/view_bg_cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,6 +26,7 @@
 
         <TextView
             android:id="@+id/tv_begin"
+            android:visibility="gone"
             android:layout_width="81dp"
             android:layout_height="23dp"
             android:layout_centerInParent="true"
