--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -27,12 +27,22 @@
         <item name="android:textColor">@color/bg_tab_txt</item>
     </style>
 
+    <style name="style_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@color/bg_line</item>
+    </style>
 
     <style name="singleLine">
         <item name="android:singleLine">true</item>
     </style>
     <style name="text_13_33" parent="@style/singleLine">
         <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+
+    <style name="text_14_33" parent="@style/singleLine">
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">#333333</item>
     </style>
 
