--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -9,13 +9,18 @@
 
     <color name="bg_main">#f5f5f5</color>
 
+    <color name="transparent">#00000000</color>
     <color name="bg_transparent">#00000000</color>
     <color name="bg_transparent_50">#4d000000</color>
     <color name="white">#ffffffff</color>
+    <color name="white_50">#7fffffff</color>
     <color name="text_black">#333333</color>
     <color name="bg_line">#e4e4e4</color>
     <color name="progress_tv_color">#45C88A</color>
     <color name="bg_press">#e1e1e1</color>
 
     <color name="ripple">#1f000000</color>
+    <color name="btn_login_bg">#2BC17A</color>
+    <color name="btn_login_bg_press">#CC2BC17A</color>
+    <color name="txt_login_un_enable">#82D5A9</color>
 </resources>
