--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
                 android:ellipsize="end"
                 android:hint="@string/input_hint_username"
                 android:singleLine="true"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textColorHint="#888888"
                 android:textSize="14sp" />
 
@@ -69,7 +69,7 @@
                 android:hint="@string/input_hint_password"
                 android:password="true"
                 android:singleLine="true"
-                android:textColor="@color/white"
+                android:textColor="@color/text_black"
                 android:textColorHint="#888888"
                 android:textSize="14sp" />
 
