--- a/MyApplication/app/src/main/res/layout/fm_homepage.xml
+++ b/MyApplication/app/src/main/res/layout/fm_homepage.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,6 +14,11 @@
             android:layout_height="match_parent"
             android:background="@color/bg_main"
             android:orientation="vertical">
+
+            <com.youth.banner.Banner
+                android:id="@+id/banner"
+                android:layout_width="match_parent"
+                android:layout_height="180dp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_news"
