--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -36,6 +36,8 @@
     <color name="title_color_personal">#333333</color>
     <color name="title_color_personal_press">#7D333333</color>
 
+    <color name="title_bar_bg_course">#2cc07a</color>
+
 
 
 
