--- a/MyApplication/app/src/main/res/layout/item_for_course.xml
+++ b/MyApplication/app/src/main/res/layout/item_for_course.xml
@@ -11,34 +11,34 @@
         android:id="@+id/rel_cover"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/iv_course_cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/bg_line"/>
+            android:background="@drawable/demo_course_loading_icon" />
 
         <View
-            android:visibility="gone"
             android:id="@+id/view_bg_cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/bg_transparent_50"/>
+            android:background="@color/bg_transparent_50"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv_begin"
-            android:visibility="gone"
             android:layout_width="81dp"
             android:layout_height="23dp"
             android:layout_centerInParent="true"
-            android:textSize="11sp"
-            android:gravity="center"
-            android:textColor="@color/white"
             android:background="@drawable/shape_course_item_start_bg"
-            android:text="@string/begin_learn"/>
+            android:gravity="center"
+            android:text="@string/begin_learn"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            android:visibility="gone" />
 
 
     </RelativeLayout>
-
 
 
     <TextView
@@ -46,9 +46,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="国际教育，课程学习方法概论"
         android:ellipsize="end"
         android:singleLine="true"
+        android:text="国际教育，课程学习方法概论"
         android:textColor="@color/text_black"
         android:textSize="12sp" />
 
@@ -56,6 +56,8 @@
         android:id="@+id/tv_course_descrip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:text="来自新东方"
         android:textColor="#999999"
         android:textSize="11sp" />
