--- a/MyApplication/app/src/main/res/layout/activity_custom_splash.xml
+++ b/MyApplication/app/src/main/res/layout/activity_custom_splash.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <ImageView
         android:id="@+id/iv_custom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/splash_screen_page" />
 
     <Button
         android:id="@+id/btn_biting"
         android:layout_width="200dp"
         android:layout_height="46dp"
-        android:text="@string/splash_enter"
-        android:textColor="@color/white"
-        android:background="@drawable/shape_splash_enter_btn"
-        android:textSize="16sp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp"
-        android:visibility="gone"
-        android:textAllCaps="false"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/shape_splash_enter_btn"
+        android:text="@string/splash_enter"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
