--- a/MyApplication/app/src/main/res/layout/activity_splash.xml
+++ b/MyApplication/app/src/main/res/layout/activity_splash.xml
@@ -12,6 +12,7 @@
         android:id="@+id/iv_splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/startpage_logo_icon"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true" />
 
