--- a/MyApplication/app/src/main/res/layout/fm_me.xml
+++ b/MyApplication/app/src/main/res/layout/fm_me.xml
@@ -25,7 +25,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    android:src="@drawable/default_load_img" />
+                    android:background="@color/text_black"
+                     />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
