--- a/MyApplication/app/src/main/res/layout/fm_task.xml
+++ b/MyApplication/app/src/main/res/layout/fm_task.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <include
+        layout="@layout/common_view_title_bar_course"/>
 
-    <TextView
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs_task"
+        style="@style/MyCustomTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/md_white_1000"
+        app:tabIndicatorColor="@color/inditor_color" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#DEE2E7" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_task"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="任务" />
+        android:background="@color/md_white_1000" />
 
 </LinearLayout>
