--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -45,6 +45,7 @@
 
     <style name="singleLine">
         <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
     </style>
     <style name="text_13_33" parent="@style/singleLine">
         <item name="android:textSize">13sp</item>
@@ -55,5 +56,33 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#333333</item>
     </style>
+    <style name="text_16_33" parent="@style/singleLine">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
 
+    <style name="text_12_66" parent="@style/singleLine">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#666666</item>
+    </style>
+    <style name="text_10_99" parent="@style/singleLine">
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">#999999</item>
+    </style>
+
+    <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/inditor_color</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabPaddingStart">12dp</item>
+        <item name="tabPaddingEnd">12dp</item>
+        <item name="tabBackground">?attr/selectableItemBackground</item>
+        <item name="tabTextAppearance">@style/MyCustomTabTextAppearance</item>
+        <item name="tabSelectedTextColor">@color/inditor_color</item>
+    </style>
+
+    <style name="MyCustomTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#666666</item>
+        <item name="textAllCaps">true</item>
+    </style>
 </resources>
